LayoutTests:

Reviewed by Darin.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=8994
        Canvas doesn't reset on resize

        * fast/canvas/canvas-resize-reset-expected.checksum: Added.
        * fast/canvas/canvas-resize-reset-expected.png: Added.
        * fast/canvas/canvas-resize-reset-expected.txt: Added.
        * fast/canvas/canvas-resize-reset.html: Added.

WebCore:

        Reviewed and tweaked by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=8994
        Canvas doesn't reset on resize

        Also reset the rendering context when resetting the canvas.

        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::reset):
        (WebCore::HTMLCanvasElement::drawingContext):



Canonical link: https://commits.webkit.org/18828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24090 268f45cc-cd09-0410-ab3c-d52691b4dbfc