WebCore/html/CanvasRenderingContext2D.cpp
@@ -435,6 +435,8 @@ void CanvasRenderingContext2D::fill()
     GraphicsContext* c = drawingContext();
     if (!c)
         return;
+    if (state().m_path.isEmpty())
+        return;
     // FIXME: Do this through platform-independent GraphicsContext API.
 #if PLATFORM(CG)
     CGContextBeginPath(c->platformContext());
@@ -471,6 +473,8 @@ void CanvasRenderingContext2D::stroke()
 {
     GraphicsContext* c = drawingContext();
     if (!c)
+        return;
+    if (state().m_path.isEmpty())
         return;
     // FIXME: Do this through platform-independent GraphicsContext API.
 #if PLATFORM(CG)
